# finebro

./: .gitignore  CODEX.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: finance.ts  storage.ts
