[package]
name = "finebro"
version = "0.1.0"
description = "A local-first personal finance tracker"
authors = ["meatlake"]
edition = "2021"

[lib]
name = "finebro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
