[package]
name = "finebro"
version = "0.1.0"
description = "A local-first personal finance tracker"
authors = ["meatlake"]
edition = "2021"

[lib]
name = "finebro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2", features = [] }
